--- a/templates/show-image.html
+++ b/templates/show-image.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Альбом</title>
 </head>
 <body>
-{% for name in names %}
-<img src="/Images/{{name}}" width="100" height="100">
+    {% for name in names %}
+    <a href="{{url_for('open_image', filename=name)}}"><img src="{{url_for('open_image', filename=name)}}"
+                                                            width="100" height="100" class="lazy"></a>
 {% endfor %}
 </body>
 </html>
