--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,7 @@
 img {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
+    align: center;
 }
 
 .grid {
@@ -8,7 +9,7 @@ img {
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 20px;
   align-items: stretch;
-  }
+}
 .grid > article {
   border: 1px solid #ccc;
   box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
@@ -26,3 +27,32 @@ img {
   padding: 10px;
   width: 100%;
   }
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1rem;
+    padding: 1rem;
+}
+html {
+    font-size: 16px;
+    font-family: 'Open Sans', 'Helvetica Neue', 'Arial', sans-serif;
+}
+body {
+    background-color: #efefef;
+}
+* {
+    box-sizing: border-box;
+}
+.card {
+    box-shadow: 0px 1px 5px #555;
+    background-color: pink;
+}
+.card__title {
+    font-size: 2rem;
+    padding: .5rem;
+    text-align: center;
+    overflow-x: hidden;
+}
+.card__thumbnail {
+    text-align: center;
+}
