--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,119 @@
-img {
-    width: 100%;
-    height: 100%;
-    align: center;
+.nav {
+    position:fixed;
+    right:10px;
+    top:0px;
+    padding:10px;
+    background:#ffe;
 }
-
+#toTop {
+	display:none;
+	text-decoration:none;
+	position:fixed;
+	bottom:10px;
+	right:10px;
+	overflow:hidden;
+	width:51px;
+	height:51px;
+	border:none;
+	text-indent:100%;
+	background:url(../dialog/totop.png) no-repeat left top;
+}
+#toTopHover {
+	background:url(../dialog/totop.png) no-repeat left -51px;
+	width:51px;
+	height:51px;
+	display:block;
+	overflow:hidden;
+	float:left;
+	opacity:0;
+	-moz-opacity:0;
+	filter:alpha(opacity=0);
+}
+#toTop:active, #toTop:focus {
+	outline:none;
+}
+img {
+    width:100%;
+    height:100%;
+    align:center;
+}
 .grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 20px;
-  align-items: stretch;
+  display:grid;
+  grid-template-columns:repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap:20px;
+  align-items:stretch;
 }
 .grid > article {
-  border: 1px solid #ccc;
-  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  border:1px solid #ccc;
+  box-shadow:2px 2px 6px 0px  rgba(0,0,0,0.3);
 }
 .grid > article img {
-  max-width: 100%;
+  max-width:100%;
 }
 .text {
-  padding: 0 20px 20px;
+  padding:0 20px 20px;
 }
 .text > button {
-  background: gray;
-  border: 0;
-  color: white;
-  padding: 10px;
-  width: 100%;
+  background:gray;
+  border:0;
+  color:white;
+  padding:10px;
+  width:100%;
   }
 .card-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 300px);
-    grid-gap: 1rem;
-    padding: 1rem;
+    display:grid;
+    grid-template-columns:repeat(auto-fit, 16%);
+    grid-gap:1rem;
+    padding:1rem;
 }
 html {
-    font-size: 16px;
-    font-family: 'Open Sans', 'Helvetica Neue', 'Arial', sans-serif;
+    font-size:16px;
+    font-family:'Open Sans', 'Helvetica Neue', 'Arial', sans-serif;
     height:100%;
 }
 body {
-    background-color: #efefef;
+    background-color:#efefef;
     height:100%;
 }
 * {
-    box-sizing: border-box;
+    box-sizing:border-box;
 }
 .card {
-    box-shadow: 0px 1px 5px #555;
-    background-color: pink;
+    box-shadow:0px 1px 5px #555;
+    background-color:#ffccff;
 }
 .card__title {
-    font-size: 2rem;
-    padding: .5rem;
-    text-align: center;
-    overflow-x: hidden;
+    color:#7300e6;
+    white-space:nowrap;
+    font-size:2rem;
+    padding:.5rem;
+    overflow:hidden;
+    text-align:center;
+    text-overflow:ellipsis;
+    max-width:300px;
 }
 .card__thumbnail {
-    text-align: center;
+    text-align:center;
+}
+header {
+    text-align:center;
+    color:#1a1aff;
+    font-size:2.5rem;
+}
+.upload-decorator {
+    overflow:hidden;
+    width:20%;
+    height:10%;
+    cursor:pointer;
+    background:url(../dialog/input-file.png) no-repeat;
+}
+.input-cap{
+    opacity:0;
+    filter:alpha(opacity:0);
+    font-size:199px;
+    cursor:pointer;
+    padding:0px;
+    margin:0px;
+    border:none;
+    margin-left:-450px;
 }
