--- a/templates/show-image.html
+++ b/templates/show-image.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Gallery</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('open_file', filename='style.css', directory='css')}}">
-    <script src="{{url_for('open_file', filename='lazy-loading.js', directory='js')}}"></script>
-    <script src="{{url_for('open_file', filename='gallery.js', directory='js')}}"></script>
-	<script src="{{url_for('open_file', filename='dialog.js', directory='js')}}"></script>
+    <title>Галерея</title>
+    <link rel="stylesheet" type="text/css" href="/open/css/style.css">
+    <script src="/open/js/lazy-loading.js" type="text/javascript"></script>
+    <script src="/open/js/gallery.js" type="text/javascript"></script>
+    <script src="/open/js/dialog.js" type="text/javascript"></script>
+    <script src="/open/js/config.js" type="text/javascript"></script>
+    <script src="/open/js/easing.js" type="text/javascript"></script>
+    <script src="/open/js/totop.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $().UItoTop({ easingType: 'easeOutQuart' });
+        });
+    </script>
 </head>
 <body onload="gallery()">
+    <header><h1>Ваш персональный альбом</h1></header>
+    <form enctype="multipart/form-data" method="post" action="{{url_for('show_images')}}">
+        <div class="upload-decorator">
+            <input class="input-cap" type="file" name="photo" required accept="image/*" size="1" onchange="form.submit()">
+        </div>
+    </form>
 <section id="fancy" class="card-container">
 {% for name in names %}
     <article class="card">
